--- a/djangoResort/inspector/templates/inspector/index.html
+++ b/djangoResort/inspector/templates/inspector/index.html
@@ -31,8 +31,8 @@
             </tr>
             </thead>
             <tbody>
-            {% if player %}
-            {% for p in player %}
+            {% if players %}
+            {% for p in players %}
                 <a href="{% url 'inspector:detail' p.id %}">
                 <tr>
                     <td>{{p.name}}</td>
