--- a/djangoResort/inspector/templates/inspector/base.html
+++ b/djangoResort/inspector/templates/inspector/base.html
@@ -7,6 +7,7 @@
     <title>Resort Inspector</title>
 
     <link rel="stylesheet" media="screen" href="{% static 'inspector/css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'inspector/css/dashboard.css' %}" />
     {% block css %}
     {% endblock %}
 
@@ -17,7 +18,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
 <div class="container-fluid">
     <div class="navbar-header">
-        <a class="navbar-brand" href="#">Resort Inspector</a>
+        <a class="navbar-brand" href="{% url 'inspector:index' %}">Resort Inspector</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
